--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/static/servers.css">
 </head>
 <body>
-  <form action="/button" method="post">
+  <form action="/result" method="post">
     <p>
       Your Name:
 
