--- a/templates/result.html
+++ b/templates/result.html
@@ -10,16 +10,16 @@
 <body>
   <form>
     <p>
-      Your Name: 
+      Your Name:  {{name}}
     </p>
     <p>
-      Dojo Location:
+      Dojo Location:  {{location}}
     </p>
     <p>
-      Favorite Language:
+      Favorite Language:  {{language}}
     </p>
     <p>
-      Comment: (optional)
+      Comment: (optional)  {{comment}}
     </p>
   </form>
 </body>
